[gd_scene load_steps=4 format=3 uid="uid://db2uu53vg482c"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_d0hln"]
[ext_resource type="FontFile" uid="uid://r21aclhkkg6l" path="res://Monocraft.otf" id="1_pagr6"]
[ext_resource type="PackedScene" uid="uid://bn8crl0pcf12y" path="res://background.tscn" id="3_ooj82"]

[node name="Main menu" type="Node2D"]
script = ExtResource("1_d0hln")

[node name="Start_Button" type="Button" parent="."]
modulate = Color(0.294118, 1, 0.588235, 1)
offset_left = 800.0
offset_top = 304.0
offset_right = 1119.0
offset_bottom = 430.0
theme_override_fonts/font = ExtResource("1_pagr6")
theme_override_font_sizes/font_size = 50
text = "Грати"

[node name="Setting_Button" type="Button" parent="."]
modulate = Color(1.34766e-06, 0.804206, 0.876013, 1)
offset_left = 800.0
offset_top = 479.0
offset_right = 1119.0
offset_bottom = 605.0
theme_override_fonts/font = ExtResource("1_pagr6")
theme_override_font_sizes/font_size = 30
text = "Налаштування"

[node name="Quit_Button" type="Button" parent="."]
modulate = Color(0.853632, 0.247622, 0.331553, 1)
offset_left = 800.0
offset_top = 654.0
offset_right = 1119.0
offset_bottom = 780.0
theme_override_fonts/font = ExtResource("1_pagr6")
theme_override_font_sizes/font_size = 50
text = "Вийти"

[node name="Label" type="Label" parent="."]
offset_left = 1818.0
offset_top = 1046.0
offset_right = 1919.0
offset_bottom = 1078.0
theme_override_fonts/font = ExtResource("1_pagr6")
theme_override_font_sizes/font_size = 30
text = "v 0.9"

[node name="Background" parent="." instance=ExtResource("3_ooj82")]

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Setting_Button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_quit_button_pressed"]
